fix top-margin issue for #content in firefox; fix song-list-show css overlap in firefox; custom pagination of songs by page

--- a/app/assets/stylesheets/content.css.scss
+++ b/app/assets/stylesheets/content.css.scss
@@ -2,19 +2,15 @@
 
 #content {
   width: 1000px;
-  margin-top: 50px;
+  padding-top: 50px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 100px;
   background: #ffffe1;
-  // min-height: 500px;
   border-left: 1px solid black;
   border-right: 1px solid black;
   border-bottom: 1px solid black;
-
   outline: 2px solid white;
-  // outline-right: 2px solid white;
-  // outline-bottom: 2px solid white;
-  margin-bottom: 80px;
 }
 
 .sidebar {
