--- a/app/assets/stylesheets/song_list.css.scss
+++ b/app/assets/stylesheets/song_list.css.scss
@@ -6,7 +6,7 @@
 
 .genres-container {
   float: right;
-  width: 180px;
+  width: 175px;
   text-align: left
 }
 
@@ -15,7 +15,7 @@
 }
 
 .song-list-info {
-  width: 535px;
+  width: 528px;
   float: left;
   margin-left: 15px;
   margin-top: 15px
